--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
 	background-image: url("https://i.imgur.com/1Rg03go.png");
 	background-repeat: repeat;
